# ffmpeg-version-manager

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.sh  ffmpeg-list.json  hello.c  toolchain-windows.cmake
.github/workflows/: build.yml
src/: cli.cc  cli.hh  environment.cc  environment.hh  main.cc  request.cc  request.hh  ui_elements.cc  ui_elements.hh
